# NumPy

./: .gitignore  Engine_Data.p  README.md  pyproject.toml  second_cw_submission.ipynb
src/: HPR.py  HPRnew.py  coursework.py  lec1.py  lec2.py  lec3.py  lec4.py  lec5.py  main.py
src/components/: DataProcessing.py
