[tool.poetry]
name = "numpy-coding"
version = "0.1.0"
description = ""
authors = ["Jake Crane <jackx.crane@hotmail.com>"]
readme = "README.md"
packages = [{include = "numpy_coding"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
