[tool.poetry]
name = "numpy-coding"
version = "0.1.0"
description = ""
authors = ["Jake Crane <jackx.crane@hotmail.com>"]
readme = "README.md"
packages = [{include = "numpy_coding"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.4"
yfinance = "^0.1.85"
pandas = "^1.5.1"
matplotlib = "^3.6.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
